# Blanch-or-other-

./: CLAUDE.md  calibration_sim.py  render.yaml
backend/: Dockerfile  docker-compose.yml  pyproject.toml  start.sh
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  analysis.py  color_season.py  influencer.py  lip_combo.py  product.py  product_mention.py  saved_product.py  user.py
backend/app/routers/: analysis.py  auth.py  combos.py  influencers.py  products.py  seasons.py  subscriptions.py
backend/app/schemas/: analysis.py  auth.py  color_season.py  influencer.py  lip_combo.py  product.py
backend/app/services/: analysis.py  auth.py  combos.py  influencers.py  products.py  seasons.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 3f8a1c92d4e7_add_product_indexes.py  9c2b4f17e8a1_add_product_unique_constraint.py  ca472ec20b68_add_influencer_social_urls.py  dea98e341b0c_initial_schema.py
backend/pipeline/importers/: makeup_api_importer.py  ulta_blush_importer.py
backend/pipeline/loaders/: db_loader.py
backend/pipeline/parsers/: color_matcher.py  combo_detector.py  mention_extractor.py
backend/pipeline/scrapers/: instagram.py
backend/pipeline/seeds/: color_seasons.json  influencers.json  lip_combos.json  products.json
backend/tests/: test_color_matcher.py  test_mention_extractor.py
ios/Blanch/: project.yml
ios/Blanch/Blanch/: Info.plist
ios/Blanch/Blanch.xcodeproj/: project.pbxproj
ios/Blanch/Blanch/App/: AppCoordinator.swift  BlanchApp.swift
(+57 files in other folders)
